--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-# ==========================
-# PUERTO (LOCAL + NUBE)
-# ==========================
+
 server.port=${PORT:8080}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Puerto: usa el PORT de Azure o 8080 por defecto
-server.port=${PORT:8080}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
